# ntfy-send

./: Cargo.toml  README.md
src/: logging.rs  main.rs  queue.rs
